Affix is now set with no additional js file Added text (and a few translations) and real photos for demo reasons

--- a/config/locales/el.json
+++ b/config/locales/el.json
@@ -3,5 +3,17 @@
 	"Home": "Αρχική",
 	"About": "Σχετικά",
 	"Contact": "Επικοινωνία",
-	"Products": "Προϊόντα"
+	"Products": "Προϊόντα",
+	"Industrial Chemicals": "Βιομηχανικά Χημικά",
+	"Contact Form": "Φόρμα Επικοινωνίας",
+	"Name": "Όνομα",
+	"Email": "Email",
+	"Message": "Μήνυμα",
+	"Submit": "Αποστολή",
+	"Address": "Διεύθυνση",
+	"17, Arionos st.": "Όδος Αρίωνος 17",
+	"Marousi": "Μαρούσι",
+	"Greece": "Ελλάδα",
+	"Tel.:": "Τηλ.:",
+	"Fax:": "Φαξ:"
 }
