--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -3,5 +3,18 @@
 	"Home": "Home",
 	"About": "About",
 	"Contact": "Contact",
-	"Products": "Products"
+	"Products": "Products",
+	"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas feugiat enim id interdum pretium. Vivamus orci eros, lacinia non erat at, luctus sodales lorem. Mauris vel commodo orci. Nunc ac enim dolor. Duis mattis at mauris a vestibulum. Suspendisse eu maximus nisl. Donec ac tincidunt est, et sollicitudin neque. Donec iaculis urna at ligula euismod fringilla. Sed dignissim justo odio, nec pellentesque nisl bibendum fringilla. Etiam volutpat porta nunc, a elementum sapien pharetra et. Nullam molestie arcu vitae ante tristique iaculis. Nam semper imperdiet est, ut congue sapien mollis eu. Suspendisse non est a lacus laoreet viverra eu eget diam.": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas feugiat enim id interdum pretium. Vivamus orci eros, lacinia non erat at, luctus sodales lorem. Mauris vel commodo orci. Nunc ac enim dolor. Duis mattis at mauris a vestibulum. Suspendisse eu maximus nisl. Donec ac tincidunt est, et sollicitudin neque. Donec iaculis urna at ligula euismod fringilla. Sed dignissim justo odio, nec pellentesque nisl bibendum fringilla. Etiam volutpat porta nunc, a elementum sapien pharetra et. Nullam molestie arcu vitae ante tristique iaculis. Nam semper imperdiet est, ut congue sapien mollis eu. Suspendisse non est a lacus laoreet viverra eu eget diam.",
+	"Industrial Chemicals": "Industrial Chemicals",
+	"Contact Form": "Contact Form",
+	"Name": "Name",
+	"Email": "Email",
+	"Message": "Message",
+	"Submit": "Submit",
+	"Address": "Address",
+	"17, Arionos st.": "17, Arionos st.",
+	"Marousi": "Marousi",
+	"Greece": "Greece",
+	"Tel.:": "Tel.:",
+	"Fax:": "Fax:"
 }
